Show picked person

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
   <h1>People Picker</h1>
   <button onclick="getPeople()">Get people</button>
   <button onclick="pickRandomPerson()">Pick a random person</button>
+  <h1>The lucky person</h1>
+  <section id="pickedPerson"></section>
   <h1>Unpicked people</h1>
   <section id="unpickedPeople"></section>
   <h1>Picked people</h1>
