--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>People Picker</h1>
-  <button onclick="getPeople()">Get people</button>
+  <button onclick="confirmAlert('This will erase your current progress and reset everything. Are you sure?', getPeople)">Get people</button>
   <button onclick="pickRandomPerson()">Pick a random person</button>
   <h1>The lucky person</h1>
   <section id="pickedPerson"></section>
