Fixed ppeople typo that a PR introduced.

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <button onclick="pickRandomPerson()">Pick a random person</button>
   <h1>The lucky person</h1>
   <section id="pickedPerson"></section>
-  <h1>Unpicked ppeople</h1>
+  <h1>Unpicked people</h1>
   <section id="unpickedPeople"></section>
   <h1>Picked people</h1>
   <section id="pickedPeople"></section>
