Fix confirm dialog implementation

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>People Picker</h1>
-  <button onclick="confirmAlert('This will erase your current progress and reset everything. Are you sure?', getPeople)">Get people</button>
+  <button onclick="openDialogGetPeople()">Get people</button>
   <button onclick="pickRandomPerson()">Pick a random person</button>
   <h1>The lucky person</h1>
   <section id="pickedPerson"></section>
@@ -23,6 +23,14 @@
     <p class="errorMessage"></p>
     <button onclick="d.close();">Close</button>
   </dialog>
+  <dialog id="dialogConfirm">
+    <p id="dialogConfirmText">Are you sure?</p>
+    <form method="dialog">
+      <button id="dialogConfirmNo">No</button>
+      <button id="dialogConfirmYes">Yes</button>
+    </form>
+  </dialog>
 </body>
+
 
 </html>
