add stashed people functionality

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,14 @@
 <body>
   <h1>People Picker</h1>
   <button onclick="confirmDialog()">Get people</button>
-  <button onclick="pickRandomPerson()">Pick a random person</button>
+  <button onclick="getNextPerson()">Pick a random person</button>
+  <button onclick="stashPerson()">Stash</button>
   <h1>The lucky person</h1>
   <section id="pickedPerson"></section>
   <h1>Unpicked people</h1>
   <section id="unpickedPeople"></section>
+  <h1>Stashed people</h1>
+  <section id="stashedPeople"></section>
   <h1>Picked people</h1>
   <section id="pickedPeople"></section>
   <dialog>
