--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-  <h1>People Picker</h1>
+  <header>
+    <h1>People Picker</h1>
+    <img class="duck" src="duck.png" />
+  </header>
+  
   <button onclick="confirmDialog()">Get people</button>
   <button onclick="pickRandomPerson()">Pick a random person</button>
   <h1>The lucky person</h1>
