Add shooting star animation to index.html and index.css

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,14 @@
     <button onclick="getNextPerson()">Pick a random person</button>
     <button onclick="stashPerson()">Stash</button>
   </section>
+  <section id="stars">
+    <div class="star" id="star1"></div>
+    <div class="star" id="star2"></div>
+    <div class="star" id="star3"></div>
+  </section>
   <h2>The lucky person</h2>
   <section id="pickedPerson"></section>
+  </section>
   <h2>Unpicked people</h2>
   <section id="unpickedPeople"></section>
   <h2>Stashed people</h2>
