Moved the duck image to images folder

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <header>
-      <h1>People Picker</h1>
-      <div class="duck">
-        <img class="duck" src="duck.png" />
-      </div>
+    <h1>People Picker</h1>
+    <div class="duck">
+      <img class="duck" src="/images/duck.png" />
+    </div>
   </header>
   <section class="buttons">
     <button onclick="confirmDialog()">Get people</button>
